--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
     <link rel="preconnect" href="httpa://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;
@@ -39,7 +39,7 @@
     </div>
 <section class="about">
     <div class="main">
-        <img src="profil.png">
+        <img src="./profil.png">
         <div class="about-text">
             <h2>About Me</h2>
             <h5>Developer <span>& Designer</span></h5>
