--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
         </div>
         <div class="card">
             <i class="fa fa-user"></i>
-            <h5>Web Development</h5>
+            <h5>Web Design</h5>
             <div class="pra">
-            <p>Every website should be built with two primary goal: Firstly, it needs
-                to work across all devices. Secondly, it needs to be fast as possible.</p>
+            <p>I create visually appealing designs that enhance user experience and contribute to a positive online presence.</p>
     
                 <p style="text-align: center;">
                    <a class="button" href="#">Read More</a> 
@@ -83,10 +82,9 @@
         </div>
         <div class="card">
             <i class="fa fa-bell"></i>
-            <h5>Web Development</h5>
+            <h5>Web Animation</h5>
             <div class="pra">
-            <p>Every website should be built with two primary goal: Firstly, it needs
-                to work across all devices. Secondly, it needs to be fast as possible.</p>
+            <p>I incorporate web animations to make websites more engaging and dynamic, providing a memorable user experience.</p>
     
                 <p style="text-align: center;">
                    <a class="button" href="#">Read More</a> 
