--- a/index.html
+++ b/index.html
@@ -110,5 +110,6 @@
         </div>
         <p class="end">CopyRight By Pepic Faris</p>
 </footer>
+    <script src="app.js"></script>
 </body>
 </html>
