--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </section>
 <div class="service">
     <div class="title">
-        <h2>Our Services</h2>
+        <h2>My Skills</h2>
     </div>
     <div class="box">
         <div class="card">
