--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <h2 class="logo">Portfo<span>lio</span></h2>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#">About Me</a></li>
                 <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-            <a href="#" class="btn">Subscribe</a>
+            <a href="https://www.instagram.com/codingwithfaris?igsh=MWZ2Nmtoc2xxc3IydQ==" class="btn">Subscribe</a>
         </nav>
 
     <div class="content">
@@ -109,7 +108,7 @@
           <a href="#"><i class="fa fa-dribbble"></i></a>  
         </div>
         <p class="end">CopyRight By Pepic Faris</p>
+        <script src="app.js"></script>
 </footer>
-    <script src="app.js"></script>
 </body>
 </html>
